--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <div>
             <form id="form">
                 <div class="altura-peso">
-                    <label for="altura">Altura (metros):</label>
-                    <input type="number" id="altura" placeholder="Digite a sua altura..." name="altura" step="0.01" required>
+                    <label for="altura">Altura (Cm):</label>
+                    <input type="number" id="altura" placeholder="Digite a sua altura..." name="altura" required>
                 </div>
                 <div class="altura-peso">
                     <label for="peso">Peso (Kg):</label>
-                    <input type="number" id="peso" placeholder="Digite o seu peso..." name="peso" step="0.1" required>
+                    <input type="number" id="peso" placeholder="Digite o seu peso..." name="peso" required>
                 </div>
                 <div id="button">
                     <input type="submit" value="Enviar">
