--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="altura-peso">
                         <label for="peso">Peso (Kg):</label>
-                        <input type="number" id="peso" placeholder="Digite o seu peso..." name="peso" required>
+                        <input type="number" id="peso" placeholder="Digite o seu peso..." name="peso" step="0.01">
                     </div>
                 </div>
                 <div id="button">
@@ -33,7 +33,7 @@
         <div id="imc">
             <button id="close" onclick="closeImc(event)">X</button>
             <div id="imcText-div">
-                <span id="imcText">dqwdfq wefwe fwefaw egaweg esger sgesg ersgr egre</span>
+                <span id="imcText"></span>
             </div>
             <div class="barra">
                 <div class="baixo"></div>
