--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="altura-peso">
                         <label for="peso">Peso (Kg):</label>
-                        <input type="number" id="peso" placeholder="Digite o seu peso..." name="peso" step="0.01">
+                        <input type="number" id="peso" placeholder="Digite o seu peso..." name="peso" step="0.01" required>
                     </div>
                 </div>
                 <div id="button">
